kubernetes/apps/media/sabnzbd/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-internal
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - sabnzbd.krapulax.home
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
