kubernetes/apps/media/sabnzbd/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: SABnzbd
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/description: Usenet downloads
    gethomepage.dev/weight: "70"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - sabnzbd.krapulax.dev
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
